# valabar

./: .gitignore  alsa.vapi  appbox.vala  appbutton.vala  appchooser.vala  battery.vala  clock.vala  cpuusagemeter.vala  flake.nix  flake.old  graph.vala  host.vala  initializable.vala  item.vala  itemproxy.vala  logger.vala  menuserializer.vala  meson.build  notification_watcher.xml  notifierhost.vala  notifieritem.vala  notifierwatcher.vala  popup.vala  shell.nix  statusnotifier.vala  statusnotifieritem.vala  statusnotifierwatcher.vala  statusnotifierwatcherproxy.vala  style.css  systemtray.vala  taskbar.vala  traybackend.vapi  traychild.vala  ui.xml  valabar  valabar.ui  valabar.vala  volume.vala  watcher.vala  windowbutton.vala
.direnv/: flake-profile-4-link
